--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -16,7 +16,7 @@
     "rootDir": "./src",
     "sourceMap": true
   },
-  "exclude": ["**/__mocks__/**", "**/__tests__/**"],
+  "exclude": ["**/__mocks__/**", "**/__tests__/**", "node_modules"],
   "extends": "./tsconfig.json",
   "include": ["src"]
 }
