--- a/package.json
+++ b/package.json
@@ -43,15 +43,25 @@
     "@flex-development/exceptions": "2.0.0",
     "@flex-development/tutils": "1.0.0",
     "@types/debug": "4.1.5",
+    "@types/lodash.isboolean": "3.0.6",
     "@types/lodash.isempty": "4.4.6",
     "@types/lodash.merge": "4.6.6",
+    "@types/lodash.uniq": "4.5.6",
     "@types/node": "15.3.1",
     "@types/qs": "6.9.6",
+    "@types/uuid": "8.3.0",
+    "class-transformer": "0.4.0",
+    "class-transformer-validator": "0.9.1",
+    "class-validator": "0.13.1",
     "debug": "4.3.1",
+    "lodash.isboolean": "3.0.3",
     "lodash.isempty": "4.4.0",
     "lodash.merge": "4.6.2",
+    "lodash.uniq": "4.5.0",
     "mingo": "4.1.2",
-    "qs-to-mongo": "2.0.0"
+    "qs-to-mongo": "2.0.0",
+    "reflect-metadata": "0.1.13",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "latest",
