--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@typescript-eslint/parser": "latest",
     "@zerollup/ts-transform-paths": "latest",
     "axios": "latest",
+    "dequal": "latest",
     "dotenv-cli": "latest",
     "eslint": "latest",
     "eslint-config-prettier": "latest",
